# ToonChess

./: .gitignore  .travis.yml  CMakeLists-glfw.txt.in  CMakeLists.txt  COPYING  README.md  README.txt  index.html
assets/: bishop_fragments.cobj  queen_fragments.cobj
config/toonchess/: config.txt
gui/: CMakeLists.txt  setup.py.in
gui/toonchess/: ToonChess.py  __main__.py  get_config_path.py.in  get_share_path.py.in  utils.py
shaders/: blackBorderFS.glsl  blackBorderFragmentShader.glsl  blackBorderVS.glsl  blackBorderVertexShader.glsl  celShadingFS.glsl  celShadingFragmentShader.glsl  celShadingVS.glsl  colorPickingFS.glsl  colorPickingVS.glsl  shadowMappingFS.glsl  shadowMappingVS.glsl  smokeFS.glsl  smokeVS.glsl  toonFragmentShader.glsl
share/applications/: toonchess.desktop
share/toonchess/: config.txt
share/toonchess/assets/: king_fragments.cobj  knight_fragments.cobj  pawn_fragments.cobj  rook_fragments.cobj
share/toonchess/shaders/: blackBorderVS.glsl  celShadingFS.glsl  colorPickingFS.glsl  smokeFS.glsl  smokeVS.glsl
src/: 3DToonChess.cxx  Camera.hxx  DirectionalLight.hxx  GameInfo.hxx  ToonChess.cxx  constants.hxx  get_config_path.cxx.in  get_config_path.hxx  get_share_path.cxx.in  get_share_path.hxx  utils.cxx  utils.hxx
src/Camera/: Camera.cxx  Camera.hxx
src/ChessGame/: AIConnector.cxx  AIConnector.hxx  ChessGame.cxx  ChessGame.hxx  ConnectionException.cxx  GameException.cxx  StockfishConnector.cxx  StockfishConnector.hxx
src/Clock/: Clock.cxx  Clock.hxx
src/ColorPicking/: ColorPicking.cxx  ColorPicking.hxx
src/Event/: Event.hxx  EventStack.cxx  EventStack.hxx
src/EventHandler/: Event.hxx  EventHandler.hxx
src/Game/: Game.cxx  Game.hxx  GameException.cxx  GameException.hxx
src/PhysicsWorld/: Fragment.cxx  Fragment.hxx  IPhysicsWorld.hxx  PhysicsWorld.cxx  PhysicsWorld.hxx
src/ShadowMapping/: ShadowMapping.cxx  ShadowMapping.hxx
src/SmokeGenerator/: SmokeGenerator.cxx  SmokeGenerator.hxx
src/StockfishConnector/: ConnectionException.cxx  ConnectionException.hxx  StockfishConnector.cxx  StockfishConnector.hxx
src/chessBoard/: chessBoard.cxx  chessBoard.hxx
src/mesh/: Mesh.cxx  Mesh.hxx  loadObjFile.cxx  loadObjFile.hxx  meshes.cxx  meshes.hxx  utils.cxx  utils.hxx
src/shader/: CompilationException.cxx  CompilationException.hxx  LinkingException.cxx  LinkingException.hxx  Shader.cxx  Shader.hxx  ShaderProgram.cxx  ShaderProgram.hxx  shaderPrograms.cxx  shaderPrograms.hxx
src/stockfishConnector/: ConnectionException.hxx  stockfishConnector.hxx
src/utils/: math.cxx  math.hxx  utils.cxx  utils.hxx
tests/: test_main.cxx  test_utils.cxx  test_utils.hxx
tests/ChessGame/: test_chessgame.cxx
tests/Game/: test_game.cxx
tests/chessBoard/: test_chessBoard.cxx
tests/mesh/: test_mesh.cxx  test_utils.cxx
tests/testFixtures/: test.txt
tests/utils/: test_math.cxx  test_utils.cxx
website/: 3dview.js  THREEJS_plugins.js  TrackballControls.js
